--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: sendgrid_example_1_development
+  database: sendgrid1_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: sendgrid_example_1
+  #username: sendgrid1
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: sendgrid_example_1_test
+  database: sendgrid1_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: sendgrid_example_1_production
-  username: sendgrid_example_1
-  password: <%= ENV["SENDGRID_EXAMPLE_1_DATABASE_PASSWORD"] %>
+  database: sendgrid1_production
+  username: sendgrid1
+  password: <%= ENV["sendgrid1_DATABASE_PASSWORD"] %>
